Activity Welcome, login y home

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,23 @@
         android:theme="@style/Theme.VoidTune"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".Activities.MainActivity"
             android:exported="true">
         </activity>
 
         <activity
-            android:name=".Login"
+            android:name=".Activities.RegisterActivity"
+            android:exported="true">
+        </activity>
+
+        <activity
+            android:name=".Activities.Login"
+            android:exported="true">
+        </activity>
+
+
+        <activity
+            android:name=".Activities.WelcomeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
